syntax = "proto3";

package comment;

option go_package = "./proto/comment";

// CommentService definition
service CommentService {
    rpc CreateComment(CreateRequest) returns (CreateResponse);
    rpc ReadAComment(ReadRequest) returns (ReadResponse);
    rpc ReadAllCommentsOfAPost(ReadAllRequest) returns (ReadAllResponse);
    rpc UpdateAComment(UpdateRequest) returns (UpdateResponse);
    rpc DeleteAComment(DeleteRequest) returns (DeleteResponse);
}

// Comment message definition
message Comment {
    string id = 1;
    string post_id = 2;
    string content = 3;
    string author = 4;
    string created_at = 5;
    string updated_at = 6;
}

// CreateRequest message definition
message CreateRequest {
    string post_id = 1;
    string content = 2;
    string author = 3;
}

// CreateResponse message definition
message CreateResponse {
    string id = 1;
    string post_id = 2;
    string content = 3;
    string author = 4;
    string created_at = 5;
    string updated_at = 6;
    Status status = 7;
}

// ReadRequest message definition
message ReadRequest {
    string id = 1;
}

// ReadResponse message definition
message ReadResponse {
    string id = 1;
    string post_id = 2;
    string content = 3;
    string author = 4;
    string created_at = 5;
    string updated_at = 6;
    Status status = 7;
}

// ReadAllRequest message definition
message ReadAllRequest {
    string post_id = 1;
}

// ReadAllResponse message definition
message ReadAllResponse {
    repeated Comment comments = 1;
    Status status = 2;
}

// UpdateRequest message definition
message UpdateRequest {
    string id = 1;
    string content = 3;
}

// UpdateResponse message definition
message UpdateResponse {
    string id = 1;
    string post_id = 2;
    string content = 3;
    string author = 4;
    string created_at = 5;
    string updated_at = 6;
    Status status = 7;
}

// DeleteRequest message definition
message DeleteRequest {
    string id = 1;
}

// DeleteResponse message definition
message DeleteResponse {
    string id = 1;
    Status status = 2;
}

// status
message Status {
    int32 code = 1;
    string message = 2;
}